Chore: 기타 코드 정리